Quotation marks matter

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter: 
-  username               : @hendersonad
+  username               : "@hendersonad"
 facebook:
   username               :
   app_id                 :
