--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 #theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-GB"
@@ -125,7 +125,15 @@ author:
 # Site Footer
 footer:
   links:
-
+    - label: "LSHTM website"
+      icon: "fas fa-fw fa-link"
+      url: "https://www.lshtm.ac.uk/aboutus/people/henderson.alasdair"
+    - label: "@hendersonad"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/hendersonad"
+    - label: "@hendersonad"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/hendersonad"
 
 # Reading Files
 include:
