--- a/_config.yml
+++ b/_config.yml
@@ -273,3 +273,10 @@ defaults:
       comments: # true
       share: true
       related: false
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
