Img, icons and names

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-GB"
 title                    : "Alasdair Henderson"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Alasdair Henderson"
+name                     : "Site name"
 description              : "Personal website"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -118,7 +118,7 @@ author:
       #icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:your.name@email.com"
     - label: "Bad day? Watch this"
-      icon: "fab fa-youtube"
+      icon: "fab fa-youtube-square"
       url: "https://youtu.be/vAoADCSpD-8"
     - label: "Or this"
       icon: "fas fa-fw fa-youtube"  
