--- a/_config.yml
+++ b/_config.yml
@@ -111,12 +111,18 @@ author:
     - #label: "Email"
       #icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:your.name@email.com"
+    - label: "@hendersonad"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/hendersonad"
+    - label: "@hendersonad"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/hendersonad"
     - label: "Bad day? Watch this"
       icon: "fab fa-youtube"
-      url: "https://youtu.be/vAoADCSpD-8"
-    - label: "Or this"
-      icon: "fab fa-youtube"  
       url: "https://youtu.be/wL-VMOGAhzE?t=1494"
+    - label: "Or listen to this"
+      icon: "fab fa-spotify"
+      url: "https://open.spotify.com/playlist/24TypPrznaQMnZmZAlBG40?si=002a08c8f91845cb"
 # Site Footer
 footer:
   links:
