--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ locale                   : "en-GB"
 title                    : "Alasdair Henderson"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Aladair Hensderson"
+name                     : " "
 description              : "Personal website"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "hendersonad/hendersonad.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "Aladair Hensderson" # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "Aladair Henderson" # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
