--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-GB"
 title                    : "Alasdair Henderson"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : " "
+name                     : "Aladair Hensderson"
 description              : "Personal website"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
