--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "hendersonad/hendersonad.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "Aladair Henderson" # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "Alasdair Henderson" # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -101,7 +101,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Aladair Hensderson"
+  name             : "Alasdair Hensderson"
   avatar           : "assets/img/science workshop.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Research fellow in epidemiology using electronic health records. Skin conditions • Mental health • EHR • Infectious Disease Dynamics • Involvement & engagement"
   location         : "London, UK"
