--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : "assets/img/science workshop.jpg" # Open Graph/Twitter default site image
+og_image                 : "assets/img/IMG_3356.jpg" # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
