--- a/_config.yml
+++ b/_config.yml
@@ -78,12 +78,12 @@ naver_site_verification  :
 
 # Social Sharing
 twitter: 
-  username               : "@hendersonad"
+  username               : 
 facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : "assets/img/IMG_3356.jpg" # Open Graph/Twitter default site image
+og_image                 : # "assets/img/IMG_3356.jpg" # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
@@ -111,9 +111,6 @@ author:
       #icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:your.name@email.com"
     - label: "@hendersonad"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/hendersonad"
-    - label: "@hendersonad"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/hendersonad"
     - label: "Bad day? Mayb listen to this"
@@ -125,9 +122,6 @@ footer:
     - label: "LSHTM website"
       icon: "fas fa-fw fa-link"
       url: "https://www.lshtm.ac.uk/aboutus/people/henderson.alasdair"
-    - label: "@hendersonad"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/hendersonad"
     - label: "@hendersonad"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/hendersonad"
