--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Alasdair Henderson"
   avatar           : "assets/img/IMG_3356.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Research fellow in epidemiology using electronic health records. Skin conditions • Mental health • EHR • Infectious Disease Dynamics • Involvement & engagement"
+  bio              : "Statistician and epidemiologist. Research fellow at LSHTM."
   location         : "London, UK"
   #email            :
   links:
