--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : # "assets/img/IMG_3356.jpg" # Open Graph/Twitter default site image
+  og_image               : 
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "Alasdair Henderson"
-  avatar           : "assets/img/IMG_3356.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "assets/img/headshot.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Statistician and epidemiologist. Research fellow at LSHTM."
   location         : "London, UK"
   #email            :
